优化更新检查和下载流程，增加更新进度显示，调整语言文件，修复部分逻辑错误